# deep-code

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
src/coder/: agents.py  cli.py  config.py  init.py
src/deep_code/: __init__.py  __main__.py  agent_commands.py  agents.py  cli.py  collaboration.py  config.py  i18n.py  init.py  plan_mode.py  prompts.py  subagents.py  tools.py
tests/: test_agent_commands.py  test_agents_prompt.py  test_collaboration.py  test_subagents.py
